--- a/php/TablaFonetica.html
+++ b/php/TablaFonetica.html
@@ -23,7 +23,7 @@
     <tr>
         <td rowspan="2">
             <button onclick="playAudio('audio')" class="tabla1">
-                <img src="../img/monotongos/i-larga.png" alt="Botón de imagen">
+                <img src="../img/monotongos/i-larga.PNG" alt="Botón de imagen">
             </button>
         </td>
         <td>
