--- a/php/TablaFonetica.html
+++ b/php/TablaFonetica.html
@@ -33,19 +33,19 @@
         </td>
         <td rowspan="2">
             <button onclick="playAudio('audio3')" class="tabla1">
-                <img src="../img/monotongos/i-corta.png" alt="Botón de imagen">
+                <img src="../img/monotongos/i-corta.PNG" alt="Botón de imagen">
             </button>
         </td>
         <td><button onclick="playAudio('audio4')"><img src="../img/btn-play2-re.png" alt="Botón de imagen"></button></td>
         <td rowspan="2">
             <button onclick="playAudio('audio5')" class="tabla1">
-                <img src="../img/monotongos/u.png" alt="Botón de imagen">
+                <img src="../img/monotongos/u.PNG" alt="Botón de imagen">
             </button>
         </td>
         <td><button onclick="playAudio('audio6')"><img src="../img/btn-play2-re.png" alt="Botón de imagen"></button></td>
         <td rowspan="2">
             <button onclick="playAudio('audio7')" class="tabla1">
-                <img src="../img/monotongos/u-larga.png" alt="Botón de imagen">
+                <img src="../img/monotongos/u-larga.PNG" alt="Botón de imagen">
             </button>
         </td>
         <td><button onclick="playAudio('audio8')"><img src="../img/btn-play2-re.png" alt="Botón de imagen"></button></td>
@@ -60,25 +60,25 @@
     <tr>
         <td rowspan="2">
             <button onclick="playAudio('audio9')" class="tabla1">
-                <img src="../img/monotongos/e.png" alt="Botón de imagen">
+                <img src="../img/monotongos/e.PNG" alt="Botón de imagen">
             </button>
         </td>
         <td><button onclick="playAudio('audio10')" ><img src="../img/btn-play2-re.png" alt="Botón de imagen"></button></td>
         <td rowspan="2">
             <button onclick="playAudio('audio11')" class="tabla1">
-                <img src="../img/monotongos/schwa.png" alt="Botón de imagen">
+                <img src="../img/monotongos/schwa.PNG" alt="Botón de imagen">
             </button>
         </td>
         <td><button onclick="playAudio('audio12')"><img src="../img/btn-play2-re.png" alt="Botón de imagen"></button></td>
         <td rowspan="2">
             <button onclick="playAudio('audio13')" class="tabla1">
-                <img src="../img/monotongos/schwa-larga.png" alt="Botón de imagen">
+                <img src="../img/monotongos/schwa-larga.PNG" alt="Botón de imagen">
             </button>
         </td>
         <td><button onclick="playAudio('audio14')"><img src="../img/btn-play2-re.png" alt="Botón de imagen"></button></td>
         <td rowspan="2">
             <button onclick="playAudio('audio15')" class="tabla1">
-                <img src="../img/monotongos/o-larga.png" alt="Botón de imagen">
+                <img src="../img/monotongos/o-larga.PNG" alt="Botón de imagen">
             </button>
         </td>
         <td><button onclick="playAudio('audio16')"><img src="../img/btn-play2-re.png" alt="Botón de imagen"></button></td>
@@ -93,25 +93,25 @@
     <tr>
         <td rowspan="2">
             <button onclick="playAudio('audio17')" class="tabla1">
-                <img src="../img/monotongos/a.png" alt="Botón de imagen">
+                <img src="../img/monotongos/a.PNG" alt="Botón de imagen">
             </button>
         </td>
         <td><button onclick="playAudio('audio18')"><img src="../img/btn-play2-re.png" alt="Botón de imagen"></button></td>
         <td rowspan="2">
             <button onclick="playAudio('audio19')" class="tabla1">
-                <img src="../img/monotongos/london.png" alt="Botón de imagen">
+                <img src="../img/monotongos/london.PNG" alt="Botón de imagen">
             </button>
         </td>
         <td><button onclick="playAudio('audio20')"><img src="../img/btn-play2-re.png" alt="Botón de imagen"></button></td>
         <td rowspan="2">
             <button onclick="playAudio('audio21')" class="tabla1">
-                <img src="../img/monotongos/a-larga.png" alt="Botón de imagen">
+                <img src="../img/monotongos/a-larga.PNG" alt="Botón de imagen">
             </button>
         </td>
         <td><button onclick="playAudio('audio22')"><img src="../img/btn-play2-re.png" alt="Botón de imagen"></button></td>
         <td rowspan="2">
             <button onclick="playAudio('audio23')" class="tabla1">
-              <img src="../img/monotongos/o-corta.png" alt="Botón de imagen">
+              <img src="../img/monotongos/o-corta.PNG" alt="Botón de imagen">
             </button>
         </td>
         <td><button onclick="playAudio('audio24')"><img src="../img/btn-play2-re.png" alt="Botón de imagen"></button></td>
